Fix popper arrow visibility

--- a/src/core/popper/popper.module.css
+++ b/src/core/popper/popper.module.css
@@ -60,7 +60,9 @@
   border-left: 1px solid var(--bs-border-color);
 }
 
-.popper[data-popper-reference-hidden] {
+.popper[data-popper-reference-hidden],
+.popper[data-popper-reference-hidden] [data-popper-arrow],
+.popper[data-popper-reference-hidden] [data-popper-arrow]::before {
   visibility: hidden;
   pointer-events: none;
 }
